--- a/src/assets/style/fixed/element.scss
+++ b/src/assets/style/fixed/element.scss
@@ -18,10 +18,7 @@
   box-shadow: none !important;
 }
 
-.d2-container-full__body__spacious,
-.d2-container-full-bs__body-wrapper-inner__spacious,
-.d2-container-card__body-card__spacious,
-.d2-container-card-bs__body-card__spacious {
+.is-spacious {
   .el-table::before {
     background-color: #FFF;
   }
