--- a/src/assets/style/theme/theme-base.scss
+++ b/src/assets/style/theme/theme-base.scss
@@ -293,7 +293,7 @@
                 padding: 20px 20px;
                 overflow: auto;
                 position: relative;
-                &.d2-container-full__body__spacious {
+                &.is-spacious {
                   padding: 0px;
                 }
               }
@@ -321,7 +321,7 @@
                 .d2-container-full-bs__body-wrapper-inner {
                   padding: 20px;
                   position: relative;
-                  &.d2-container-full-bs__body-wrapper-inner__spacious {
+                  &.is-spacious {
                     padding: 0px;
                   }
                 }
@@ -404,7 +404,7 @@
                   padding: 20px;
                   border-bottom-left-radius: 4px;
                   border-bottom-right-radius: 4px;
-                  &.d2-container-card__body-card__spacious {
+                  &.is-spacious {
                     padding: 0px;
                   }
                 }
@@ -440,7 +440,7 @@
                   padding: 20px;
                   border-bottom-left-radius: 4px;
                   border-bottom-right-radius: 4px;
-                  &.d2-container-card-bs__body-card__spacious {
+                  &.is-spacious {
                     padding: 0px;
                   }
                 }
