完善 crud 演示页面

--- a/src/assets/style/fixed/element.scss
+++ b/src/assets/style/fixed/element.scss
@@ -18,6 +18,10 @@
   box-shadow: none !important;
 }
 
+.el-drawer__body {
+  padding: 20px;
+}
+
 .is-spacious {
   .el-table::before {
     background-color: #FFF;
