el-dialog__no-top-border

--- a/src/assets/style/fixed/element.scss
+++ b/src/assets/style/fixed/element.scss
@@ -33,3 +33,10 @@
     height: 0px;
   }
 }
+
+.el-dialog {
+  &.el-dialog__no-top-border {
+    border-top-left-radius: 0px;
+    border-top-right-radius: 0px;
+  }
+}
