--- a/src/assets/style/fixed/element.scss
+++ b/src/assets/style/fixed/element.scss
@@ -25,27 +25,23 @@
 
 
 // 更窄的按钮
-.d2-button {
-  &.el-button--mini {
-    &.is-thin {
-      +.is-thin {
-        margin-left: 4px;
-      }
-      padding-left: 8px;
-      padding-right: 8px;
+.el-button--mini {
+  &.is-thin {
+    +.is-thin {
+      margin-left: 4px;
     }
+    padding-left: 8px;
+    padding-right: 8px;
   }
 }
 // 在 d2-bar 上默认使用更窄的按钮
 .d2-bar {
-  .d2-button {
-    &.el-button--mini {
-      +.el-button--mini {
-        margin-left: 4px;
-      }
-      padding-left: 8px;
-      padding-right: 8px;
+  .el-button--mini {
+    +.el-button--mini {
+      margin-left: 4px;
     }
+    padding-left: 8px;
+    padding-right: 8px;
   }
 }
 
@@ -91,5 +87,11 @@
   &.el-dialog__no-top-border {
     border-top-left-radius: 0px;
     border-top-right-radius: 0px;
+  }
+}
+
+.el-drawer {
+  .el-drawer__body {
+    overflow: scroll;
   }
 }
