--- a/src/assets/style/theme/theme-base.scss
+++ b/src/assets/style/theme/theme-base.scss
@@ -170,8 +170,8 @@
           padding: 14px 12px;
           border-radius: 4px;
           margin: 0px !important;
-          &.btn-text__is-color-picker {
-            padding: 9px 8px;
+          &.el-color-picker.el-color-picker--mini {
+            padding: 9px 6px;
           }
         }
         .el-dropdown {
@@ -288,7 +288,7 @@
               flex-direction: column;
               overflow: hidden;
               .d2-container-full__header {
-                padding: 10px;
+                padding: 20px;
               }
               .d2-container-full__body {
                 flex-grow: 1;
@@ -296,12 +296,9 @@
                 padding: 20px 20px;
                 overflow: auto;
                 position: relative;
-                &.is-spacious {
-                  padding: 0px;
-                }
               }
               .d2-container-full__footer {
-                padding: 10px;
+                padding: 20px;
               }
             }
             // 填充式布局组件 - 滚动优化
@@ -315,7 +312,7 @@
               flex-direction: column;
               overflow: hidden;
               .d2-container-full-bs__header {
-                padding: 10px;
+                padding: 20px;
               }
               .d2-container-full-bs__body {
                 flex-grow: 1;
@@ -324,13 +321,10 @@
                 .d2-container-full-bs__body-wrapper-inner {
                   padding: 20px;
                   position: relative;
-                  &.is-spacious {
-                    padding: 0px;
-                  }
                 }
               }
               .d2-container-full-bs__footer {
-                padding: 10px;
+                padding: 20px;
               }
             }
             // 隐形布局组件
@@ -344,7 +338,7 @@
               flex-direction: column;
               overflow: hidden;
               .d2-container-ghost__header {
-                padding: 10px;
+                padding: 20px;
                 border-bottom-left-radius: 4px;
                 border-bottom-right-radius: 4px;
               }
@@ -354,7 +348,7 @@
                 position: relative;
               }
               .d2-container-ghost__footer {
-                padding: 10px;
+                padding: 20px;
                 border-top-left-radius: 4px;
                 border-top-right-radius: 4px;
               }
@@ -370,7 +364,7 @@
               flex-direction: column;
               overflow: hidden;
               .d2-container-ghost-bs__header {
-                padding: 10px;
+                padding: 20px;
                 border-bottom-left-radius: 4px;
                 border-bottom-right-radius: 4px;
               }
@@ -380,7 +374,7 @@
                 position: relative;
               }
               .d2-container-ghost-bs__footer {
-                padding: 10px;
+                padding: 20px;
                 border-top-left-radius: 4px;
                 border-top-right-radius: 4px;
               }
@@ -396,7 +390,7 @@
               flex-direction: column;
               overflow: hidden;
               .d2-container-card__header {
-                padding: 10px;
+                padding: 20px;
               }
               .d2-container-card__body {
                 flex-grow: 1;
@@ -407,13 +401,10 @@
                   padding: 20px;
                   border-bottom-left-radius: 4px;
                   border-bottom-right-radius: 4px;
-                  &.is-spacious {
-                    padding: 0px;
-                  }
                 }
               }
               .d2-container-card__footer {
-                padding: 10px;
+                padding: 20px;
                 border-top-left-radius: 4px;
                 border-top-right-radius: 4px;
               }
@@ -429,7 +420,7 @@
               flex-direction: column;
               overflow: hidden;
               .d2-container-card-bs__header {
-                padding: 10px;
+                padding: 20px;
               }
               .d2-container-card-bs__body {
                 position: relative;
@@ -443,13 +434,10 @@
                   padding: 20px;
                   border-bottom-left-radius: 4px;
                   border-bottom-right-radius: 4px;
-                  &.is-spacious {
-                    padding: 0px;
-                  }
                 }
               }
               .d2-container-card-bs__footer {
-                padding: 10px;
+                padding: 20px;
                 border-top-left-radius: 4px;
                 border-top-right-radius: 4px;
               }
